# GameHelperAPI

./: .gitignore  context.py  context_knight.py  main.py  pyproject.toml  test.py
builders/repositories/radar/: buildFloorsImgs.py  buildRadarImagesCoordinates.py
src/gameplay/core/tasks/: loot.py  orchestrator.py  useHotkey.py
src/gameplay/core/tasks/common/: base.py
src/gameplay/healing/: healingByPotions.py  healingBySpells.py
src/gameplay/middlewares/: mapMiddleware.py  playerStatus.py  screenshotMiddleware.py
src/gameplay/threads/: gameThread.py  keyListener.py
src/repositories/actionBar/: config.py  core.py  extractors.py  locators.py
src/repositories/map/: config.py  core.py  extractors.py  locators.py
src/repositories/map/images/: addBlackOffset.py
src/repositories/skills/: core.py  locators.py
src/repositories/statusBar/: core  core.py  extractors.py  locators.py
src/repositories/statusBar/__pycache__/: core.getFilledBarPercentage-12.py39.1.nbc  core.getFilledBarPercentage-12.py39.nbi  core.getFilledBarPercentage-13.py39.1.nbc  core.getFilledBarPercentage-13.py39.nbi
src/utils/: coordinate.py  core.py  image.py  keyboard.py  makePycwnd.py  typings.py
src/utils/__pycache__/: image.convertGraysToBlack-46.py39.1.nbc  image.convertGraysToBlack-46.py39.nbi
src/wiki/: spells.py
