[tool.poetry]
name = "GameHelper"
version = "0.1.0"
description = ""
authors = ["Christopher Rosenvall"]
readme = "README.md"

[tool.poetry.dependencies]
mypy = "^1.1.1"
nptyping = "^2.5.0"
numba = "^0.56.4"
numpy = "1.21.4"
opencv-python = "4.7.0.72"
pillow = "^9.1.1"
pyautogui = "^0.9.53"
pygetwindow = "^0.0.9"
python = "3.9.13"
scipy = "^1.9.1"
tcod = "^13.8.1"
tinydb = "^4.8.0"
xxhash = "^3.1.0"
pywin32 = "^306"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"